--- a/.gitignore
+++ b/.gitignore
@@ -150,3 +150,10 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 .idea/
+dataset/
+Untitled.ipynb
+Untitled1.ipynb
+Untitled2.ipynb
+ckpt/
+models/
+.idea/Real_time_style_transfer.iml
